--- a/extensions/manifest.json
+++ b/extensions/manifest.json
@@ -2,7 +2,6 @@
   "name": "chrome-extensions-template",
   "description": "chrome extensions 脚手架，使用 webpack + typescript",
   "version": "1.0.0",
-  "homepage_url": "",
   "manifest_version": 2,
   "icons": {
     "16": "assets/chrome-logo.png",
@@ -12,7 +11,7 @@
   "permissions": [],
   "content_scripts": [
     {
-      "matches": [],
+      "matches": ["<all_urls>"],
       "js": [
         "dist/content.js"
       ],
